1.13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput
  labels:
    app: logoutput
spec:
  selector:
    app: logoutput
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
