1.13/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: logoutput.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutput
                port:
                  number: 80
